Integrate with GNU Autotools (automake and Autoconf)

--- a/MakeFiles/Watcom/Win32/makefile
+++ b/MakeFiles/Watcom/Win32/makefile
@@ -1,8 +1,8 @@
-# $Id: makefile,v 1.5 2005/07/30 19:37:18 ph0enix Exp $
+# $Id$
 
 CC 	= wcc386.exe
 CCP 	= wpp386.exe
-CDEFS	= /oilmrt /s
+CDEFS	= /oilmrt /s /DHAVE_IO_H /DHAVE_MALLOC_H
 CFLAGS	= -I$(INCLUDE) -bt=nt $(CDEFS)
 TOS	= NT
 TNAME	= rntrack_w32
