--- a/trunk/MakeFiles/emx/Makefile.emx
+++ b/trunk/MakeFiles/emx/Makefile.emx
@@ -10,7 +10,7 @@ CC=	gcc
 PERL=D:/PERLLIB/LIB/5.00553/os2
 
 CFLAGS=	-Wall -fno-rtti -s -g
-CDEFS=	-DOS2 -DEMX -DDO_PERL -DDOSISH -DEMBED
+CDEFS=	-DOS2 -DEMX -DDO_PERL -DDOSISH -DEMBED -DHAVE_UNISTD_H -DHAVE_IO_H
 COPT=	-I../../hpp -I../../.. -I$(PERL)/CORE -O3
 SRCDIR= ../../src/
 LFLAGS=	-Zcrtdll -L../../../smapi -g
