The program version number from configure.ac is not used any more, that is why it is now not necessary to change 'configure.ac' and 'configure' at every change of RNtrack version.

--- a/configure.ac
+++ b/configure.ac
@@ -1,7 +1,9 @@
 # RNtrack                                      -*- Autoconf -*-
 # Process this file with autoconf to produce a configure script.
-# $Id:$
+# $Id$
 
+# Starting with RNtrack 1.16 the version number
+# in the following AC_INIT line is NOT used
 AC_INIT(RNtrack, 1.15, dukelsky@users.sourceforge.net)
 AC_CONFIG_SRCDIR(src/rntrack.cpp)
 AC_CONFIG_AUX_DIR(MakeFiles)
