--- a/trunk/MakeFiles/Solaris/Makefile
+++ b/trunk/MakeFiles/Solaris/Makefile
@@ -12,7 +12,7 @@ SRCDIR	= ../../src/
 #ENABLE_SYSLOG_LOG_FORMAT=1
 
 ifeq ($(ENABLE_SCRIPTS), 1)
-    CFLAGS += `perl -e 'print "-D__PERL_NEW__" if ($$\>=5.008);'` `perl -MExtUtils::Embed -e ccopts`
+    CFLAGS += `perl -e 'print "-D__PERL_NEW__" if ($$]>=5.008);'` `perl -MExtUtils::Embed -e ccopts`
     LFLAGS += `perl -MExtUtils::Embed -e ldopts`    
 else
     CDEFS  += -D__NOSCRIPTS__
