Replace __PERL_NEW__ preprocessor define with __PERL_VERSION__, __PERL_MAJOR__ and __PERL_MINOR__ (all generates in g++ calling string)

--- a/MakeFiles/Solaris/Makefile.x86
+++ b/MakeFiles/Solaris/Makefile.x86
@@ -1,4 +1,5 @@
 # $Id$
+# to be removed - after sources check to bigendian/littleendian differences
 CC	= g++
 CFLAGS	= -Wall -fno-rtti -I../../hpp -I../../src
 CDEFS	= -DUNIX -D__SUN__ -O3 
@@ -12,8 +13,8 @@ SRCDIR	= ../../src/
 #ENABLE_SYSLOG_LOG_FORMAT=1
 
 ifeq ($(ENABLE_SCRIPTS), 1)
-    CFLAGS += `perl -e 'print "-D__PERL_NEW__" if ($$\>=5.008);'` `perl -MExtUtils::Embed -e ccopts`
-    LFLAGS += `perl -MExtUtils::Embed -e ldopts`    
+    CFLAGS += `perl -e '@v=split(/\./,"$$]"); print "-D__PERL_VERSION__=".join("",@v)." -D__PERL_MAJOR__=$$v[0] -D__PERL_MINOR__=$$v[1]";'` `perl -MExtUtils::Embed -e ccopts`
+    LFLAGS += `perl -MExtUtils::Embed -e ldopts`
 else
     CDEFS  += -D__NOSCRIPTS__
 endif
