--- a/MakeFiles/Solaris/Makefile
+++ b/MakeFiles/Solaris/Makefile
@@ -1,4 +1,5 @@
 # $Id$
+# This makefile should be used with GNU make program
 CC	= g++
 CFLAGS	= -Wall -fno-rtti -I../../hpp -I../../src
 CDEFS	= -DUNIX -D__SUN__ -D_AIX_CONV -O3 
@@ -12,8 +13,8 @@ SRCDIR	= ../../src/
 #ENABLE_SYSLOG_LOG_FORMAT=1
 
 ifeq ($(ENABLE_SCRIPTS), 1)
-    CFLAGS += `perl -e 'print "-D__PERL_NEW__" if ($$]>=5.008);'` `perl -MExtUtils::Embed -e ccopts`
-    LFLAGS += `perl -MExtUtils::Embed -e ldopts`    
+    CFLAGS += `perl -e '@v=split(/\./,"$$]"); print "-D__PERL_VERSION__=".join("",@v)." -D__PERL_MAJOR__=$$v[0] -D__PERL_MINOR__=$$v[1]";'` `perl -MExtUtils::Embed -e ccopts`
+    LFLAGS += `perl -MExtUtils::Embed -e ldopts`
 else
     CDEFS  += -D__NOSCRIPTS__
 endif
