--- a/MakeFiles/djgpp/Makefile
+++ b/MakeFiles/djgpp/Makefile
@@ -14,10 +14,8 @@ EXEEND	= _386.exe
 #ENABLE_SYSLOG_LOG_FORMAT=1
 
 ifeq ($(ENABLE_SCRIPTS), 1)
-    CFLAGS += `perl -MExtUtils::Embed -e ccopts`
+    CFLAGS += `perl -e '@v=split(/\./,"$$]"); print "-D__PERL_VERSION__=".join("",@v)." -D__PERL_MAJOR__=$$v[0] -D__PERL_MINOR__=$$v[1]";'` `perl -MExtUtils::Embed -e ccopts`
     LFLAGS += `perl -MExtUtils::Embed -e ldopts`
-else
-    CDEFS  += -D__NOSCRIPTS__
 endif
 
 ifeq ($(ENABLE_SYSLOG_LOG_FORMAT), 1)
