Update doc filenames in Makefile.am in accordance with reality

--- a/Makefile.am
+++ b/Makefile.am
@@ -6,7 +6,7 @@ DIST_SUBDIRS = doc samples
 EXTRA_DIST = AUTHORS BUG-REPORTING COPYING ChangeLog INSTALL KnownBugs README TODO samples
 
 man_MANS = doc/rntrack.1
-data_DATA = doc/FAQ doc/FAQ.ru doc/MANUAL doc/MANUAL.ru doc/report.err doc/report.err.ru
+data_DATA = doc/FAQ_en doc/FAQ_ru doc/MANUAL doc/Manual_ru.odt doc/report.err doc/report.err.ru
 
 dist-hook:
 	find $(distdir)/samples $(distdir)/doc -name .svn -exec rm -r '{}' ';'
