fix MS VS 2010 solution and project files resulting from moving smapi diectory

--- a/branches/trunk_2.0.0/MakeFiles/msvc/vs2010/rntrack.vcxproj
+++ b/branches/trunk_2.0.0/MakeFiles/msvc/vs2010/rntrack.vcxproj
@@ -77,7 +77,7 @@
       <Optimization>Disabled</Optimization>
       <BrowseInformation>true</BrowseInformation>
       <DisableSpecificWarnings>4996</DisableSpecificWarnings>
-      <AdditionalIncludeDirectories>..\..\..\src;..\..\..\hpp;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\..\src;..\..\..\hpp;..\..\..\smapi\h;..\..\..\smapi\src</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <TargetMachine>MachineX86</TargetMachine>
