--- a/branches/trunk_2.0.0/MakeFiles/msvc/vs2010/smapi.vcxproj.filters
+++ b/branches/trunk_2.0.0/MakeFiles/msvc/vs2010/smapi.vcxproj.filters
@@ -15,188 +15,188 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\src\smapi\1stchar.c">
+    <ClCompile Include="..\..\..\smapi\src\1stchar.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\src\smapi\api_jam.c">
+    <ClCompile Include="..\..\..\smapi\src\api_jam.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\src\smapi\api_sdm.c">
+    <ClCompile Include="..\..\..\smapi\src\api_sdm.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\src\smapi\cvtdate.c">
+    <ClCompile Include="..\..\..\smapi\src\cvtdate.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\src\smapi\date2bin.c">
+    <ClCompile Include="..\..\..\smapi\src\date2bin.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\src\smapi\dosdate.c">
+    <ClCompile Include="..\..\..\smapi\src\dosdate.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\src\smapi\fexist.c">
+    <ClCompile Include="..\..\..\smapi\src\fexist.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\src\smapi\ffind.c">
+    <ClCompile Include="..\..\..\smapi\src\ffind.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\src\smapi\flush.c">
+    <ClCompile Include="..\..\..\smapi\src\flush.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\src\smapi\genmsgid.c">
+    <ClCompile Include="..\..\..\smapi\src\genmsgid.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\src\smapi\gnmsgid.c">
+    <ClCompile Include="..\..\..\smapi\src\gnmsgid.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\src\smapi\locking.c">
+    <ClCompile Include="..\..\..\smapi\src\locking.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\src\smapi\months.c">
+    <ClCompile Include="..\..\..\smapi\src\months.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\src\smapi\msgapi.c">
+    <ClCompile Include="..\..\..\smapi\src\msgapi.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\src\smapi\parsenn.c">
+    <ClCompile Include="..\..\..\smapi\src\parsenn.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\src\smapi\patmat.c">
+    <ClCompile Include="..\..\..\smapi\src\patmat.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\src\smapi\qksort.c">
+    <ClCompile Include="..\..\..\smapi\src\qksort.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\src\smapi\setfsize.c">
+    <ClCompile Include="..\..\..\smapi\src\setfsize.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\src\smapi\sq_area.c">
+    <ClCompile Include="..\..\..\smapi\src\sq_area.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\src\smapi\sq_hash.c">
+    <ClCompile Include="..\..\..\smapi\src\sq_hash.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\src\smapi\sq_help.c">
+    <ClCompile Include="..\..\..\smapi\src\sq_help.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\src\smapi\sq_idx.c">
+    <ClCompile Include="..\..\..\smapi\src\sq_idx.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\src\smapi\sq_kill.c">
+    <ClCompile Include="..\..\..\smapi\src\sq_kill.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\src\smapi\sq_lock.c">
+    <ClCompile Include="..\..\..\smapi\src\sq_lock.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\src\smapi\sq_misc.c">
+    <ClCompile Include="..\..\..\smapi\src\sq_misc.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\src\smapi\sq_msg.c">
+    <ClCompile Include="..\..\..\smapi\src\sq_msg.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\src\smapi\sq_read.c">
+    <ClCompile Include="..\..\..\smapi\src\sq_read.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\src\smapi\sq_uid.c">
+    <ClCompile Include="..\..\..\smapi\src\sq_uid.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\src\smapi\sq_write.c">
+    <ClCompile Include="..\..\..\smapi\src\sq_write.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\src\smapi\strextra.c">
+    <ClCompile Include="..\..\..\smapi\src\strextra.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\src\smapi\strftim.c">
+    <ClCompile Include="..\..\..\smapi\src\strftim.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\src\smapi\strocpy.c">
+    <ClCompile Include="..\..\..\smapi\src\strocpy.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\src\smapi\structrw.c">
+    <ClCompile Include="..\..\..\smapi\src\structrw.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\src\smapi\tdelay.c">
+    <ClCompile Include="..\..\..\smapi\src\tdelay.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\src\smapi\trail.c">
+    <ClCompile Include="..\..\..\smapi\src\trail.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\src\smapi\weekday.c">
+    <ClCompile Include="..\..\..\smapi\src\weekday.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\..\..\src\smapi\flushasm.asm">
+    <None Include="..\..\..\smapi\src\flushasm.asm">
       <Filter>Source Files</Filter>
     </None>
-    <None Include="..\..\..\src\smapi\sqasm.asm">
+    <None Include="..\..\..\smapi\src\sqasm.asm">
       <Filter>Source Files</Filter>
     </None>
-    <None Include="..\..\..\src\smapi\makefile.inc">
+    <None Include="..\..\..\smapi\makefile.inc">
       <Filter>Header Files</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\src\smapi\apidebug.h">
+    <ClInclude Include="..\..\..\smapi\h\apidebug.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\src\smapi\api_brow.h">
+    <ClInclude Include="..\..\..\smapi\h\api_brow.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\src\smapi\api_jam.h">
+    <ClInclude Include="..\..\..\smapi\h\api_jam.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\src\smapi\api_jamp.h">
+    <ClInclude Include="..\..\..\smapi\h\api_jamp.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\src\smapi\api_sdm.h">
+    <ClInclude Include="..\..\..\smapi\h\api_sdm.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\src\smapi\api_sdmp.h">
+    <ClInclude Include="..\..\..\smapi\h\api_sdmp.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\src\smapi\api_sq.h">
+    <ClInclude Include="..\..\..\smapi\h\api_sq.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\src\smapi\api_sqp.h">
+    <ClInclude Include="..\..\..\smapi\h\api_sqp.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\src\smapi\compiler.h">
+    <ClInclude Include="..\..\..\smapi\h\compiler.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\src\smapi\cvsdate.h">
+    <ClInclude Include="..\..\..\smapi\h\cvsdate.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\src\smapi\dr.h">
+    <ClInclude Include="..\..\..\smapi\h\dr.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\src\smapi\ffind.h">
+    <ClInclude Include="..\..\..\smapi\h\ffind.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\src\smapi\msgapi.h">
+    <ClInclude Include="..\..\..\smapi\h\msgapi.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\src\smapi\old_msg.h">
+    <ClInclude Include="..\..\..\smapi\h\old_msg.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\src\smapi\patmat.h">
+    <ClInclude Include="..\..\..\smapi\h\patmat.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\src\smapi\prog.h">
+    <ClInclude Include="..\..\..\smapi\h\prog.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\src\smapi\progprot.h">
+    <ClInclude Include="..\..\..\smapi\h\progprot.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\src\smapi\stamp.h">
+    <ClInclude Include="..\..\..\smapi\h\stamp.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\src\smapi\strextra.h">
+    <ClInclude Include="..\..\..\smapi\h\strextra.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\src\smapi\typedefs.h">
+    <ClInclude Include="..\..\..\smapi\h\typedefs.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\src\smapi\unused.h">
+    <ClInclude Include="..\..\..\smapi\h\unused.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="resource.h">
